We have : CKEditor 3.2 update, Installer rework and assorted fixes. CKEditor has been upgraded from the development snapshot to the recently released 3.2 version, there were some fixes needed doing to the theme (Notice the css selector gymnastics in pixie.js.php I had to do.) I reworked the installer to fix two bugs on it and improve readability. Added the ability to create the database if it does not exist, forked out the css and javascript into individual files (For easier maintainability) And added a little jQuery to the user account creation section (See if you can spot what I've done.) :) This new version of the installer really needs testing and if you find any bugs, please either just commit the fix or let me know using the usual methods. I won't be doing anything else to the installer before release unless it involves fixing bugs on it. Fixed a bug in the installer's .htaccess generation that would segfault your apache httpd server on occasion. Fixed the blank error dialog on section three of the installer. Fixed multiple regeneration of .htaccess and config.php in the installer. Fixed wrong install type default selection in the installer.

--- a/trunk/admin/admin/theme/ckPixie/editor.css
+++ b/trunk/admin/admin/theme/ckPixie/editor.css
@@ -1,5 +1,7 @@
-.cke_skin_ckPixie .cke_toolbar:first-child{display:none;}
+#btnLockSizes .cke_label,#btnResetSize .cke_label,#cke_content_arialbl,.cke_voice_label,.cke_skin_ckPixie .cke_toolbox span:first-child+span[class$=toolbar]{display:none;}
+a.cke_smile img:hover{cursor:pointer;}
 .cke_skin_ckPixie *,.cke_skin_ckPixie a:hover,.cke_skin_ckPixie a:link,.cke_skin_ckPixie a:visited,.cke_skin_ckPixie a:active{border:0;background:transparent;text-decoration:none;font:normal normal normal 100% Sans-Serif;width:auto;height:auto;border-collapse:collapse;text-align:left;vertical-align:baseline;white-space:nowrap;cursor:auto;color:#676666;font-size:12px;font-family:Arial,'Lucida Grande',Verdana,Sans-Serif;margin:0;padding:0;}
+.cke_skin_ckPixie a:hover,.cke_skin_ckPixie a:link,.cke_skin_ckPixie a:visited,.cke_skin_ckPixie a:active{cursor:pointer;}
 .cke_skin_ckPixie .cke_rtl *,.cke_skin_ckPixie .cke_rtl a:hover,.cke_skin_ckPixie .cke_rtl a:link,.cke_skin_ckPixie .cke_rtl a:visited,.cke_skin_ckPixie .cke_rtl a:active,.cke_rtl .cke_skin_ckPixie *,.cke_rtl .cke_skin_ckPixie a:hover,.cke_rtl .cke_skin_ckPixie a:link,.cke_rtl .cke_skin_ckPixie a:visited,.cke_rtl .cke_skin_ckPixie a:active{text-align:right;}
 .cke_skin_ckPixie textarea{white-space:pre;}
 .cke_skin_ckPixie .cke_editor{display:inline-table;width:100%;}
